<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context="damasco.placefinderapp.AdminActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true"
        android:id="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/admin_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_text_password_lama"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/textInputLayout4"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true"
        android:id="@+id/textInputLayout5">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/admin_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_text_password_baru"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/textInputLayout5"
        android:layout_centerHorizontal="true"
        app:passwordToggleEnabled="true"
        android:id="@+id/textInputLayout6">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/admin_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_text_ulangi_password_baru"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/admin_btn_change"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textInputLayout6"
        android:text="@string/admin_text_btn_ubah_password" />
</RelativeLayout>
